--- a/home/shield/.config/foot/foot.ini
+++ b/home/shield/.config/foot/foot.ini
@@ -1,5 +1,15 @@
 [main]
 font=monospace:size=8
+
+[scrollback]
+multiplier=24.0
+
+[cursor]
+style=beam
+blink=yes
+beam-thickness=1
+
 [colors]
-background=edeced
-foreground=000000
+foreground=ffffff
+background=8a0f45
+alpha=0.75
