--- a/home/shield/.config/foot/foot.ini
+++ b/home/shield/.config/foot/foot.ini
@@ -1,15 +1,13 @@
 [main]
-font=monospace:size=8
+font=IBMPlexMono:size=10
 
 [scrollback]
 multiplier=24.0
 
 [cursor]
-style=beam
 blink=yes
-beam-thickness=1
 
 [colors]
+background=660033
+alpha=0.7
 foreground=ffffff
-background=8a0f45
-alpha=0.75
