--- a/home/shield/.config/fuzzel/fuzzel.ini
+++ b/home/shield/.config/fuzzel/fuzzel.ini
@@ -1,18 +1,19 @@
 [main]
-font=monospace:size=8
+font=IBMPlexMono:size=10
 lines=13
 horizontal-pad=1
 vertical-pad=0
+inner-pad=5
 width=35
 icons-enabled=false
 prompt='$ '
 
 [colors]
 border=00000000
-background=8c1146bf
+background=000000ff
 text=ffffffff
-selection=9c104c8f
-selection-text=ffffffff
+selection=ffffffff
+selection-text=000000ff
 
 [border]
 radius=0
